<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEquipo">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etNombreEquipoEdit"
        app:layout_constraintGuide_percent="0.27"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.66"
        app:layout_constraintTop_toBottomOf="@+id/etAforoEquipoEdit" />

    <Button
        android:id="@+id/btCrearEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/crearE"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorCrear" />

    <ImageButton
        android:id="@+id/ibCrearEquipo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/selectimage"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/selectimage" />

    <EditText
        android:id="@+id/etNombreEquipoCrear"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombreE"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etCiudadEquipoCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibCrearEquipo" />

    <EditText
        android:id="@+id/etCiudadEquipoCrear"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ciudadE"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etEstadioEquipoCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreEquipoCrear" />

    <EditText
        android:id="@+id/etEstadioEquipoCrear"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/estadioE"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etAforoEquipoCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCiudadEquipoCrear" />

    <EditText
        android:id="@+id/etAforoEquipoCrear"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/aforoE"
        android:inputType="number"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEstadioEquipoCrear" />

    <TextView
        android:id="@+id/tvErrorCrear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAforoEquipoCrear" />

</androidx.constraintlayout.widget.ConstraintLayout>